KM-1413 meta description & few changes

--- a/public/charity/index.html
+++ b/public/charity/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR | Home page" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -92,16 +92,16 @@
                         <a class="nav-link" aria-current="page" href="#">Home.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../inner_pages/page-about.html">About.</a>
+                        <a class="nav-link" href="../inner_pages/about.html">About.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../inner_pages/page-services.html">Services.</a>
+                        <a class="nav-link" href="../inner_pages/services.html">Services.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../page-blog-3.html">News.</a>
+                        <a class="nav-link" href="../blog-3.html">News.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../page-contact-3.html">Contact.</a>
+                        <a class="nav-link" href="../contact.html">Contact.</a>
                     </li>
                 </ul>
                 <div class="button_su border-0 radius-4">
@@ -836,8 +836,8 @@
                                 </div>
                                 <div class="info pt-30">
                                     <p class="fsz-16 color-orange7 text-uppercase mb-10 fw-bold"> 24th June 2023 </p>
-                                    <h5> <a href="../page-single-post-3.html"
-                                            class="fsz-22 fw-bold hover-orange7 mb-40"> Water is a nonprofit
+                                    <h5> <a href="../single-post-3.html" class="fsz-22 fw-bold hover-orange7 mb-40">
+                                            Water is a nonprofit
                                             organization bringing clean. </a> </h5>
                                     <a href="#"> <a href="#" class="color-999 hover-underLine hover-darkBlue1 fw-bold">
                                             Read More </a> </a>
@@ -852,8 +852,8 @@
                                 </div>
                                 <div class="info pt-30">
                                     <p class="fsz-16 color-purple2 text-uppercase mb-10 fw-bold"> 24th June 2023 </p>
-                                    <h5> <a href="../page-single-post-3.html"
-                                            class="fsz-22 fw-bold hover-purple2 mb-40"> We want you to know exactly how
+                                    <h5> <a href="../single-post-3.html" class="fsz-22 fw-bold hover-purple2 mb-40"> We
+                                            want you to know exactly how
                                             and where your donation. </a> </h5>
                                     <a href="#"> <a href="#" class="color-999 hover-underLine hover-darkBlue1 fw-bold">
                                             Read More </a> </a>
@@ -868,7 +868,7 @@
                                 </div>
                                 <div class="info pt-30">
                                     <p class="fsz-16 color-cyan5 text-uppercase mb-10 fw-bold"> 24th June 2023 </p>
-                                    <h5> <a href="../page-single-post-3.html" class="fsz-22 fw-bold hover-cyan5 mb-40">
+                                    <h5> <a href="../single-post-3.html" class="fsz-22 fw-bold hover-cyan5 mb-40">
                                             So from the beginning, we’ve kept a few promises. </a> </h5>
                                     <a href="#"> <a href="#" class="color-999 hover-underLine hover-darkBlue1 fw-bold">
                                             Read More </a> </a>
