--- a/public/creative-portfolio.html
+++ b/public/creative-portfolio.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -59,16 +59,16 @@
                         <a class="nav-link" aria-current="page" href="#">Home.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="inner_pages/page-about.html">About.</a>
+                        <a class="nav-link" href="inner_pages/about.html">About.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="inner_pages/page-services.html">Services.</a>
+                        <a class="nav-link" href="inner_pages/services.html">Services.</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="page-blog-3.html">News.</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="page-contact-3.html">Contact.</a>
+                        <a class="nav-link" href="contact.html">Contact.</a>
                     </li>
                 </ul>
                 <div class="r-side text-lg-end">
