--- a/public/inner_pages/about.html
+++ b/public/inner_pages/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR | Home page" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -101,10 +101,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-services.html">Our Services</a>
+                            <a class="nav-link" href="inner_pages/services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-about.html">About Founder</a>
+                            <a class="nav-link" href="inner_pages/about.html">About Founder</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="creative-portfolio.html">Portfolio</a>
@@ -113,7 +113,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -122,7 +122,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> ENG </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> FR </a></li>
                         </ul>
                     </div>
@@ -145,7 +145,7 @@
         <div class="head-links">
             <a href="../index.html"> Home </a>
             <span class="icon mx-2"> <i class="fal fa-angle-right"></i> </span>
-            <a href="../inner_pages/page-about.html" class="active"> About </a>
+            <a href="../inner_pages/about.html" class="active"> About </a>
         </div>
     </header>
     <!-- end header -->
@@ -627,7 +627,7 @@
                         <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
                             <div class="button_su shadow-lg radius-3">
                                 <span class="su_button_circle bg-light1 desplode-circle"></span>
-                                <a href="../page-contact-3.html" class="butn py-2 px-4 button_su_inner bg-fff radius-3">
+                                <a href="../contact.html" class="butn py-2 px-4 button_su_inner bg-fff radius-3">
                                     <span class="button_text_container fsz-13 fw-bold text-capitalize color-000"> <img
                                             src="../assets/img/hr.png" alt="" class="icon-10 me-2"> Make A
                                         Request </span>
