--- a/public/inner_pages/soon.html
+++ b/public/inner_pages/soon.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -115,7 +115,8 @@
                         <h1 class="fsz-60"> Coming Soon </h1>
                     </div>
                     <p class="fsz-18 mt-30 text-white op-6"> Ensuring the best return on investment for your bespoke
-                        <br> SEO campaign requirement. </p>
+                        <br> SEO campaign requirement.
+                    </p>
                     <div class="timing">
                         <!-- <div class="item">
                             <h2 id="weeks"></h2>
