--- a/public/job_history_of_us_workers.html
+++ b/public/job_history_of_us_workers.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR | Job history of more than 1.2 million US workers blog page" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -119,7 +119,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -128,7 +128,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
@@ -251,7 +251,12 @@
                                     <span class="lg-letter">
                                         I
                                     </span>
-                                    would like to share an interesting study from ADP this week! They analyzed the job history of more than 1.2 million US workers in the past 3 years and found that 29% of people quit their jobs within a month of their first promotion. Why's this? Economists have noted these newly promoted folks are overwhelmed + unsupported in their role and/or have newfound confidence to seek opportunities externally.                                </p>
+                                    would like to share an interesting study from ADP this week! They analyzed the job
+                                    history of more than 1.2 million US workers in the past 3 years and found that 29%
+                                    of people quit their jobs within a month of their first promotion. Why's this?
+                                    Economists have noted these newly promoted folks are overwhelmed + unsupported in
+                                    their role and/or have newfound confidence to seek opportunities externally.
+                                </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
                                 </h4>
@@ -263,7 +268,11 @@
                                     <div class="row">
                                         <div class="col-lg-7">
                                             <p class="info-text">
-                                                What does this mean for HR practitioners and managers? From experience, I've seen IC's transition into a leadership role without much support and often make avoidable mistakes. Simply put, HR + managers need to invest their time in building role transitional programs that help bridge the gap for the newly promoted.                                            </p>
+                                                What does this mean for HR practitioners and managers? From experience,
+                                                I've seen IC's transition into a leadership role without much support
+                                                and often make avoidable mistakes. Simply put, HR + managers need to
+                                                invest their time in building role transitional programs that help
+                                                bridge the gap for the newly promoted. </p>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="img img-cover th-350 mt-15 radius-6 overflow-hidden">
@@ -275,7 +284,7 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                Any other suggestions from my HR peers?                                            </p>
+                                                Any other suggestions from my HR peers? </p>
                                         </div>
                                     </div>
                                 </div>
@@ -321,15 +330,15 @@
                                     article, right?. Well you’re in luck then.
                                 </p> -->
                                 <!-- <div class="quote-message border-1 border-top border-dark mt-50"> -->
-                                    <!-- <div class="icon">
+                                <!-- <div class="icon">
                                         <img src="assets/img/quote.png" alt="">
                                     </div> -->
-                                    <div class="info f-fm-neco">
-                                        <!-- <h3>Just remember that whatever you decide, people are going to love and hate
+                                <div class="info f-fm-neco">
+                                    <!-- <h3>Just remember that whatever you decide, people are going to love and hate
                                             it. Best of both worlds, haha. </h3> -->
-                                        <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
+                                    <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
                                             Envato Author</p> -->
-                                    </div>
+                                </div>
                                 <!-- </div> -->
                                 <!-- <h4 class="sub-title sm-content-width mt-60 fw-bold">
                                     3 Reasons to investing at this moment
@@ -405,13 +414,13 @@
                                                 <div class="swiper-slide">
                                                     <a href="./mental_toughness_leadership.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">previous</p>
-                                                        <h6 class="title">Mental toughness  <br> & leadership</h6>
+                                                        <h6 class="title">Mental toughness <br> & leadership</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
                                                     <a href="./the_median_time_for_start-ups.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The median time for start-ups <br> 
+                                                        <h6 class="title">The median time for start-ups <br>
                                                             going from Seed to Series</h6>
                                                     </a>
                                                 </div>
@@ -596,13 +605,15 @@
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i
+                                            class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                                 <div class="pop-posts mb-60">
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1"> Mental toughness & leadership
+                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1">
+                                            Mental toughness & leadership
                                         </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
@@ -610,14 +621,17 @@
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The looming recession </a>
+                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The
+                                            looming recession </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_median_time_for_start-ups.html" class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from Seed to Series </a>
+                                        <a href="./the_median_time_for_start-ups.html"
+                                            class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from
+                                            Seed to Series </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
