--- a/public/mental_toughness_leadership.html
+++ b/public/mental_toughness_leadership.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR | Mental Toughness & Leadership" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -119,7 +119,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -128,7 +128,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
@@ -251,7 +251,10 @@
                                     <span class="lg-letter">
                                         L
                                     </span>
-                                    et's talk about mental toughness & leadership : Being a leader of any function at any org is one of the most challenging roles to do...why though? Simply, they're tasked to make tough decisions to net a long-term gain while understanding not everyone will agree with their decision.
+                                    et's talk about mental toughness & leadership : Being a leader of any function at
+                                    any org is one of the most challenging roles to do...why though? Simply, they're
+                                    tasked to make tough decisions to net a long-term gain while understanding not
+                                    everyone will agree with their decision.
                                 </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
@@ -264,7 +267,20 @@
                                     <div class="row">
                                         <div class="col-lg-7">
                                             <p class="info-text">
-                                                Story time: Back in March 2020 (was at <a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D"><u>YoppWorks</u></a>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry . There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
+                                                Story time: Back in March 2020 (was at <a
+                                                    href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D"><u>YoppWorks</u></a>),
+                                                we lost almost 90% of our revenue given our clients were mostly in the
+                                                hospitality industry . There was a few of us at the office and our CEO
+                                                said let's all go for a walk! As we walked, I noticed he paced quickly
+                                                ahead whilst on calls. I couldn't imagine what was going on in his head,
+                                                but I could tell he was about to make one of his toughest decisions.
+                                                From an HR & finance perspective, it was clear that layoffs was on the
+                                                table and I figured my fate had been decided. However, instead of doing
+                                                layoffs, our CEO decided to incur losses and focus all the efforts on
+                                                business development and surely enough, we landed a large Canadian
+                                                enterprise that saved us (and we kept growing that year and needed to
+                                                hire). Looking back, this decision required strong mental toughness and
+                                                leadership (thanks for all that you did Jack Gulas)!
                                             </p>
                                         </div>
                                         <div class="col-lg-5">
@@ -277,7 +293,13 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                We're still in the midst of the year(s) of layoffs and it takes extreme mental toughness for any CEO to make these decisions. Sometimes we often blame leaders for "bad decisions", but we're unaware of the positive long-term effects of their decision. However, given we're in the private markets, it's explicit in our employment contracts that our roles can dissolve (it's never personal, it's just business) whether its our decision or the company's.
+                                                We're still in the midst of the year(s) of layoffs and it takes extreme
+                                                mental toughness for any CEO to make these decisions. Sometimes we often
+                                                blame leaders for "bad decisions", but we're unaware of the positive
+                                                long-term effects of their decision. However, given we're in the private
+                                                markets, it's explicit in our employment contracts that our roles can
+                                                dissolve (it's never personal, it's just business) whether its our
+                                                decision or the company's.
                                             </p>
                                         </div>
                                     </div>
@@ -324,15 +346,15 @@
                                     article, right?. Well you’re in luck then.
                                 </p> -->
                                 <!-- <div class="quote-message border-1 border-top border-dark mt-50"> -->
-                                    <!-- <div class="icon">
+                                <!-- <div class="icon">
                                         <img src="assets/img/quote.png" alt="">
                                     </div> -->
-                                    <div class="info f-fm-neco">
-                                        <!-- <h3>Just remember that whatever you decide, people are going to love and hate
+                                <div class="info f-fm-neco">
+                                    <!-- <h3>Just remember that whatever you decide, people are going to love and hate
                                             it. Best of both worlds, haha. </h3> -->
-                                        <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
+                                    <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
                                             Envato Author</p> -->
-                                    </div>
+                                </div>
                                 <!-- </div> -->
                                 <!-- <h4 class="sub-title sm-content-width mt-60 fw-bold">
                                     3 Reasons to investing at this moment
@@ -408,13 +430,14 @@
                                                 <div class="swiper-slide">
                                                     <a href="./job_history_of_us_workers.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">previous</p>
-                                                        <h6 class="title">Job history of more than <br> 1.2 million US workers</h6>
+                                                        <h6 class="title">Job history of more than <br> 1.2 million US
+                                                            workers</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
                                                     <a href="./the_median_time_for_start-ups.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The median time for start-ups <br> 
+                                                        <h6 class="title">The median time for start-ups <br>
                                                             going from Seed to Series</h6>
                                                     </a>
                                                 </div>
@@ -599,13 +622,15 @@
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i
+                                            class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                                 <div class="pop-posts mb-60">
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1"> Job history of more than 1.2 million US workers
+                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1">
+                                            Job history of more than 1.2 million US workers
                                         </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
@@ -613,14 +638,17 @@
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The looming recession </a>
+                                        <a href="./the_looming_recession.html" class="fsz-18 fw-bold hover-cyan1"> The
+                                            looming recession </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_median_time_for_start-ups.html" class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from Seed to Series </a>
+                                        <a href="./the_median_time_for_start-ups.html"
+                                            class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from
+                                            Seed to Series </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
@@ -705,7 +733,7 @@
                                     <a href="#"> Decision-Making </a>
                                     <a href="#"> Resilience </a>
                                     <a href="#"> Long-TermBusinessStrategy </a>
-                                   
+
                                 </div>
                             </div>
                         </div>
