--- a/public/personal-portfolio.html
+++ b/public/personal-portfolio.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -93,12 +93,12 @@
                             </a>
                         </li>
                         <li class="nav-item wow fadeInUp" data-wow-delay="0.1s">
-                            <a class="nav-link" href="inner_pages/page-about.html"> <span class="mirror"> Case </span>
+                            <a class="nav-link" href="inner_pages/about.html"> <span class="mirror"> Case </span>
                                 <p> 02 </p> <strong> Case Study </strong>
                             </a>
                         </li>
                         <li class="nav-item wow fadeInUp" data-wow-delay="0.2s">
-                            <a class="nav-link" href="inner_pages/page-services.html"> <span class="mirror"> Services
+                            <a class="nav-link" href="inner_pages/services.html"> <span class="mirror"> Services
                                 </span>
                                 <p> 03 </p> <strong> Services </strong>
                             </a>
@@ -109,12 +109,12 @@
                             </a>
                         </li>
                         <li class="nav-item wow fadeInUp" data-wow-delay="0.4s">
-                            <a class="nav-link" href="inner_pages/page-faq.html"> <span class="mirror"> FAQ </span>
+                            <a class="nav-link" href="inner_pages/faq.html"> <span class="mirror"> FAQ </span>
                                 <p> 05 </p> <strong> FAQ </strong>
                             </a>
                         </li>
                         <li class="nav-item wow fadeInUp" data-wow-delay="0.5s">
-                            <a class="nav-link" href="page-contact-3.html"> <span class="mirror"> Contact </span>
+                            <a class="nav-link" href="contact.html"> <span class="mirror"> Contact </span>
                                 <p> 06 </p> <strong> Get In Touch </strong>
                             </a>
                         </li>
