--- a/public/blog-3.html
+++ b/public/blog-3.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -107,10 +107,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-services.html">Our Services</a>
+                            <a class="nav-link" href="inner_pages/services.html">Our Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inner_pages/page-about.html">About Us</a>
+                            <a class="nav-link" href="inner_pages/about.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="creative-portfolio.html">Portfolio</a>
@@ -119,7 +119,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -128,7 +128,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
@@ -463,12 +463,13 @@
                         </div>
                         <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                         <div class="social-icons mb-60">
-                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
-                                    <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
-                                    <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
-                                    <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
-                         </div>
+                            <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
+                            <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
+                            <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
+                            <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
+                            <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i>
+                            </a>
+                        </div>
 
                         <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                         <div class="pop-posts mb-60">
