--- a/public/services.html
+++ b/public/services.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="MetanoiaHR, HR, Companies" />
-    <meta name="description" content="MetanoiaHR desc" />
+    <meta name="description" content="MetanoiaHR | Services page" />
 
     <!-- Title  -->
     <title>Services - MetanoiaHR</title>
@@ -65,7 +65,7 @@
                             </li>
                             <!-- <li> <a href="#" class="main_link"> projects </a> </li> -->
                             <!-- <li> <a href="#" class="main_link"> news </a> </li> -->
-                            <li> <a href="page-contact-3.html" class="main_link"> Contact </a> </li>
+                            <li> <a href="contact.html" class="main_link"> Contact </a> </li>
                         </ul>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -182,7 +182,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> ENG </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> FR </a></li>
                         </ul>
                     </div>
@@ -256,7 +256,7 @@
                                     your operational efficiency and boosting your bottom line.
                                 </p>
                             </div>
-                            <!-- <a href="./inner_pages/page-services.html" class="fsz-14 text-uppercase hover-cyan1">see all
+                            <!-- <a href="./inner_pages/services.html" class="fsz-14 text-uppercase hover-cyan1">see all
                                 services <i class="ti-arrow-top-right"></i> </a> -->
                         </div>
                     </div>
@@ -589,7 +589,11 @@
                                             aria-labelledby="heading100" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Strategic recruiting involves a tailored approach to finding and hiring the right talent for your organization. It ensures that you not only fill vacant positions but also align your workforce with your long-term business goals, increasing productivity and reducing turnover.
+                                                    Strategic recruiting involves a tailored approach to finding and
+                                                    hiring the right talent for your organization. It ensures that you
+                                                    not only fill vacant positions but also align your workforce with
+                                                    your long-term business goals, increasing productivity and reducing
+                                                    turnover.
                                                 </div>
                                             </div>
                                         </div>
@@ -606,7 +610,11 @@
                                             aria-labelledby="heading101" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Empowerment coaching focuses on personal and professional development. It helps employees build self-confidence, leadership skills, and resilience. This can lead to increased employee satisfaction, engagement, and overall performance, benefiting both individuals and the organization.
+                                                    Empowerment coaching focuses on personal and professional
+                                                    development. It helps employees build self-confidence, leadership
+                                                    skills, and resilience. This can lead to increased employee
+                                                    satisfaction, engagement, and overall performance, benefiting both
+                                                    individuals and the organization.
                                                 </div>
                                             </div>
                                         </div>
@@ -623,7 +631,9 @@
                                             aria-labelledby="heading102" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Our job seeker support services include resume building, interview preparation, job search strategies, and career counseling. We aim to empower job seekers to secure meaningful and satisfying employment.
+                                                    Our job seeker support services include resume building, interview
+                                                    preparation, job search strategies, and career counseling. We aim to
+                                                    empower job seekers to secure meaningful and satisfying employment.
                                                 </div>
                                             </div>
                                         </div>
@@ -640,7 +650,9 @@
                                             aria-labelledby="heading103" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Yes, we have expertise in executive recruiting. Our team can help you identify and attract top-tier executive talent to drive your organization's success.
+                                                    Yes, we have expertise in executive recruiting. Our team can help
+                                                    you identify and attract top-tier executive talent to drive your
+                                                    organization's success.
                                                 </div>
                                             </div>
                                         </div>
@@ -650,14 +662,17 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse104"
                                                 aria-expanded="true" aria-controls="collapse104">
-                                                How do you ensure the confidentiality of sensitive information during the recruiting process?
+                                                How do you ensure the confidentiality of sensitive information during
+                                                the recruiting process?
                                             </button>
                                         </h2>
                                         <div id="collapse104" class="accordion-collapse collapse"
                                             aria-labelledby="heading104" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    We have strict confidentiality protocols in place to protect sensitive information. Our team is committed to maintaining the privacy and security of all parties involved in the hiring process.
+                                                    We have strict confidentiality protocols in place to protect
+                                                    sensitive information. Our team is committed to maintaining the
+                                                    privacy and security of all parties involved in the hiring process.
                                                 </div>
                                             </div>
                                         </div>
@@ -674,7 +689,9 @@
                                             aria-labelledby="heading105" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Our personalized approach, industry expertise, and commitment to the success of both employers and job seekers set us apart. We focus on long-term partnerships and results-driven strategies.
+                                                    Our personalized approach, industry expertise, and commitment to the
+                                                    success of both employers and job seekers set us apart. We focus on
+                                                    long-term partnerships and results-driven strategies.
                                                 </div>
                                             </div>
                                         </div>
