--- a/public/the_looming_recession.html
+++ b/public/the_looming_recession.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR | The Looming Recession Blog Page" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -119,7 +119,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -128,7 +128,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
@@ -154,8 +154,8 @@
                         </a>
                         <small> 15 Minutes ago </small>
                     </div>
-                    <h4 class="title"> <a href="#"> The Looming Recession 
-                    </a>
+                    <h4 class="title"> <a href="#"> The Looming Recession
+                        </a>
                     </h4>
                     <!-- <div class="text">
                         MetanoiaHRcomes with interactive design tools and features that could leave you feeling like
@@ -252,7 +252,12 @@
                                     <span class="lg-letter">
                                         I
                                     </span>
-                                    t seems like everyday on my LinkedIn feed, there's yet another tech company doing layoffs/hiring freezes as they deal with the looming recession (which is tough to read). The tech industry experienced a great boom during the pandemic, but the 'correction' is happening now and it is survival of the fittest. Not too long ago, I was assessing opportunities for my next venture, but I didn't put as much emphasis on financial factors that I now suggest candidates to do:
+                                    t seems like everyday on my LinkedIn feed, there's yet another tech company doing
+                                    layoffs/hiring freezes as they deal with the looming recession (which is tough to
+                                    read). The tech industry experienced a great boom during the pandemic, but the
+                                    'correction' is happening now and it is survival of the fittest. Not too long ago, I
+                                    was assessing opportunities for my next venture, but I didn't put as much emphasis
+                                    on financial factors that I now suggest candidates to do:
                                 </p>
                                 <!-- <h4 class="sub-title sm-content-width mt-40 fw-bold">
                                     Sample Heading
@@ -267,11 +272,17 @@
                                             <!-- <p class="info-text">
                                                 Story time: Back in March 2020 (was at <u><a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D">YoppWorks</a></u>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry :/. There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
                                             </p> -->
-                                            <li class="mb-20">Ask companies about their ARR and/or profitability (if they aren't public).</li>
-                                            <li class=" mb-20">Where are they in their rounds of fundraising (e.g. Series A, B, C, etc)? How do they plan to spend their $$?</li>
-                                            <li class=" mb-20">How will they be impacted by inflation or instability in the markets? Are they a "recession proof" business?</li>
-                                            <li class=" mb-20">Many tech companies offer stock as part of total comp. Ask what their game plan is when there is volatility in their stock price?</li>
-                                            <li class=" mb-20">I am sure there's more questions to be asked, so let me know if you have a good one (since I am not a finance person lol)?</li>
+                                            <li class="mb-20">Ask companies about their ARR and/or profitability (if
+                                                they aren't public).</li>
+                                            <li class=" mb-20">Where are they in their rounds of fundraising (e.g.
+                                                Series A, B, C, etc)? How do they plan to spend their $$?</li>
+                                            <li class=" mb-20">How will they be impacted by inflation or instability in
+                                                the markets? Are they a "recession proof" business?</li>
+                                            <li class=" mb-20">Many tech companies offer stock as part of total comp.
+                                                Ask what their game plan is when there is volatility in their stock
+                                                price?</li>
+                                            <li class=" mb-20">I am sure there's more questions to be asked, so let me
+                                                know if you have a good one (since I am not a finance person lol)?</li>
                                         </div>
                                         <div class="col-lg-5">
                                             <div class="img img-cover th-350 mt-15 radius-6 overflow-hidden">
@@ -283,7 +294,9 @@
                                         </div>
                                         <div class="col-12">
                                             <p class="info-text">
-                                                Regardless, ensure you are equally passionate about the company's mission or product and it is one that will also pass the test of time.                                            </p>
+                                                Regardless, ensure you are equally passionate about the company's
+                                                mission or product and it is one that will also pass the test of time.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -329,15 +342,15 @@
                                     article, right?. Well you’re in luck then.
                                 </p> -->
                                 <!-- <div class="quote-message border-1 border-top border-dark mt-50"> -->
-                                    <!-- <div class="icon">
+                                <!-- <div class="icon">
                                         <img src="assets/img/quote.png" alt="">
                                     </div> -->
-                                    <div class="info f-fm-neco">
-                                        <!-- <h3>Just remember that whatever you decide, people are going to love and hate
+                                <div class="info f-fm-neco">
+                                    <!-- <h3>Just remember that whatever you decide, people are going to love and hate
                                             it. Best of both worlds, haha. </h3> -->
-                                        <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
+                                    <!-- <p class="color-999 mt-20"> <strong class="color-000">Abdullah</strong> //
                                             Envato Author</p> -->
-                                    </div>
+                                </div>
                                 <!-- </div> -->
                                 <!-- <h4 class="sub-title sm-content-width mt-60 fw-bold">
                                     3 Reasons to investing at this moment
@@ -413,13 +426,14 @@
                                                 <div class="swiper-slide">
                                                     <a href="./job_history_of_us_workers.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">previous</p>
-                                                        <h6 class="title">Job history of more than <br> 1.2 million US workers</h6>
+                                                        <h6 class="title">Job history of more than <br> 1.2 million US
+                                                            workers</h6>
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide">
                                                     <a href="./the_median_time_for_start-ups.html" class="item">
                                                         <p class="color-666 fsz-12 text-uppercase">next</p>
-                                                        <h6 class="title">The median time for start-ups <br> 
+                                                        <h6 class="title">The median time for start-ups <br>
                                                             going from Seed to Series</h6>
                                                     </a>
                                                 </div>
@@ -604,13 +618,15 @@
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i
+                                            class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                                 <div class="pop-posts mb-60">
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1"> Job history of more than 1.2 million US workers
+                                        <a href="./job_history_of_us_workers.html" class="fsz-18 fw-bold hover-cyan1">
+                                            Job history of more than 1.2 million US workers
                                         </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
@@ -618,14 +634,17 @@
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1"> Mental toughness & leadership </a>
+                                        <a href="./mental_toughness_leadership.html" class="fsz-18 fw-bold hover-cyan1">
+                                            Mental toughness & leadership </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
                                         </div>
                                     </div>
                                     <div class="post-card radius-6 bg-fff p-30 mb-15">
-                                        <a href="./the_median_time_for_start-ups.html" class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from Seed to Series </a>
+                                        <a href="./the_median_time_for_start-ups.html"
+                                            class="fsz-18 fw-bold hover-cyan1"> The median time for start-ups going from
+                                            Seed to Series </a>
                                         <div class="views color-666 mt-15">
                                             <!-- <i class="ti-pulse me-2"></i> -->
                                             <span>By Abdullah</span>
@@ -705,12 +724,12 @@
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular tags </p>
                                 <div class="tags">
-                                    <a href="#"> StartupChallenges                                    </a>
+                                    <a href="#"> StartupChallenges </a>
                                     <a href="#"> InvestmentTrends </a>
                                     <a href="#"> TechIndustry </a>
                                     <a href="#"> EconomicUncertainty </a>
                                     <a href="#"> Entrepreneurship </a>
-                                    
+
                                     <!-- <a href="#"> HTML </a>
                                     <a href="#"> PSD </a>
                                     <a href="#"> Experience </a> -->
