--- a/public/inner_pages/services-details.html
+++ b/public/inner_pages/services-details.html
@@ -5,10 +5,10 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    
     <meta name="description" content="MetanoiaHR" />
-    <meta name="author" content="" />
+    
 
     <!-- Title  -->
     <title>MetanoiaHR</title>
