--- a/public/services.html
+++ b/public/services.html
@@ -428,9 +428,8 @@
                         <div class="col-lg-8">
                             <div class="contact-side wow fadeInUp slow">
                                 <div class="section_title3 text-white mb-80">
-                                    <h2> Ready? <span class="fw-100"> contact us </span> </h2>
-                                    <p class="color-999 mt-60"> Give us a chance to serve and bring magic to your brand.
-                                    </p>
+                                    <h2> Ready? <span class="fw-100"> Contact us </span> </h2>
+                                    
                                 </div>
                                 <form action="contact.php" class="contact-form">
                                     <div class="row">
