--- a/public/contact.html
+++ b/public/contact.html
@@ -131,8 +131,7 @@
             <div class="container">
                 <div class="content">
                     <div class="section_title3 text-white mb-80">
-                        <h2> ready to work with us? <span class="fw-100"> let’s talk! </span> </h2>
-                        <p class="color-999 mt-60"> Give us a chance to serve and bring magic to your brand. </p>
+                        <h2> Ready to work with us? <span class="fw-100"> let’s talk! </span> </h2>
                     </div>
                     <div class="row gx-5">
                         <div class="col-lg-12">
